# savesaveright

./: Cargo.toml  README.md
api/: Cargo.toml
api/src/: lib.rs
ui/assets/styling/: list.css
ui/src/: blud.rs  hero.rs  input.rs  lib.rs  linkpreview.rs  list.rs
web/: Cargo.toml  saver.db
web/src/: main.rs
web/src/views/: home.rs  mod.rs  shik.rs
