[workspace]
resolver = "2"
members = [
    "ui",
    "web",
    "api",
]

[workspace.dependencies]
dioxus = { version = "0.6.0" }
reqwest     = { version = "0.12", features = ["json","rustls-tls"] }
scraper     = "0.19"
serde       = { version = "1.0", features = ["derive"] }

# workspace
ui = { path = "ui" }
api = { path = "api" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

