[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["fullstack"] }
reqwest = { version = "0.12.22", features = ["json"] }
rusqlite = { version = "0.32.1", optional = true } 
serde = { version = "1.0.219", features = ["derive"] }

[features]
server = ["dioxus/server","dep:rusqlite"]
