[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["router"] }
ui = { workspace = true }
api = {workspace = true}
rusqlite = { version = "0.32.1", optional = true } 

[features]
default = []
web = ["dioxus/web"]
server = ["dioxus/server","api/server"]
